# Pollen

./: .gitignore  Dockerfile  Pollen.cabal  README.md  pollen-docker.yml  stack.yaml
PollenSDK/PollenPush/: AppDelegate.swift  Style.swift  ViewController.swift
PollenSDK/PollenPush.xcodeproj/: project.pbxproj
PollenSDK/PollenPush.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PollenSDK/PollenPush.xcodeproj/project.xcworkspace/xcuserdata/timothybarraclough.xcuserdatad/: UserInterfaceState.xcuserstate
PollenSDK/PollenPush.xcodeproj/xcuserdata/timothybarraclough.xcuserdatad/xcschemes/: xcschememanagement.plist
PollenSDK/PollenPush/Base.lproj/: Main.storyboard
PollenSDK/PollenSDK/: PollenSDK.h
PollenSDK/PollenSDK/AppDelegate/: PollenNetwork+PollenPushHandler.swift  PollenPushHandler.swift  RemoteNotificationConfigurableProtocol.swift
PollenSDK/PollenSDK/Network/: APIDelegate.swift  APIResponseProtocol.swift  PollenNetworkSession.swift
PollenSDK/PollenSDK/Network/RequestTypes/: GetRequest.swift  PostRequest.swift
PollenSDK/PollenSDK/Utilities/: APIError.swift  Result.swift
app/: BroadcastMain.hs  Main.hs
src/: API.hs  Api.hs  Broadcast.hs  Config.hs  DeviceAPI.hs  Lib.hs  Models.hs
src/API/: Device.hs
