name:                Pollen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Pollen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.2.2.0
                     , servant-server >= 0.11
                     , persistent-postgresql >= 2.6.1
                     , wai >= 3.2.1.1
                     , warp >= 3.2.13
                     , base
                     , blaze-builder
                     , bytestring
                     , conduit
                     , containers
                     , monad-control
                     , monad-logger
                     , persistent
                     , postgresql-libpq
                     , postgresql-simple
                     , resource-pool
                     , resourcet
                     , text
                     , time
                     , transformers
                     , aeson-pretty >= 0.8.5
                     , hex >= 0.1.2
  default-language:    Haskell2010

executable Pollen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Pollen
  default-language:    Haskell2010

test-suite Pollen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Pollen
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Pollen
