name:                Pollen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Pollen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Config
                     , Models
                     , Api
                     , Api.Device
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , wai-extra
                     , warp
                     , safe
                     , servant == 0.9.1.1
                     , servant-server == 0.9.1.1
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-libpq
                     , unordered-containers
                     , text
                     , blaze-builder
                     , conduit
                     , containers
                     , monad-logger
                     , hex
                     , resource-pool
                     , resourcet
                     , time
                     , transformers
                     , aeson
                     , aeson-pretty
                     , push-notify-apn
                     , http2
                     , http2-client == 0.3.0.2
                     , mtl
                     , bytestring
  default-language:    Haskell2010

executable Pollen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Pollen
  default-language:    Haskell2010

test-suite Pollen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Pollen
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timothybarraclough/Pollen
